# Home-Loan-Calculator

./: CHANGELOG.md  Dockerfile  HomeLoanCalculator.cabal  commands.txt  docker-compose.yml
app/: LoanData.hs  Main.hs  Server.hs  Utils.hs
app/modules/: LoanData.hs  Projections.hs  Utils.hs
app/resources/: loanData.json
