cabal-version:      3.0
name:               HomeLoanCalculator
version:            0.1.0.0
license:            NONE
author:             Driexus
maintainer:         toliasdimitris@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hlc
    import:             warnings
    main-is:            Main.hs

    other-modules:      Modules.LoanData
                        Modules.Utils
                        Modules.Projections

    build-depends:      base ^>=4.17.2.1,
                        json >=0.11,
                        optparse-applicative

    hs-source-dirs:     app
                        app/modules

    default-language:   Haskell2010

executable server
    import:             warnings
    main-is:            Server.hs

    other-modules:      Modules.LoanData
                        Modules.Utils
                        Modules.Projections

    build-depends:      base ^>=4.17.2.1,
                        scotty,
                        aeson

    hs-source-dirs:     app
                        app/modules

    default-language:   Haskell2010
